# CodePilot

./: .env.example  .eslintrc.cjs  .replit  .replit.workflow  README.md  app.py  import_sample_data.py  jest.config.js  package-lock.json  package.json  package_clean.json  pyproject.toml  replit.nix  run_streamlit.sh  setup_database.py  start-all.sh  start.sh  streamlit_app.py  tailwind.config.ts  test-security.ts  theme.json  token.json  update_database.py  vitest.config.ts
.streamlit/: config.toml
attached_assets/: Pasted--0-1-from-components-medical-history-import-display-medical-history-from-components-treatment-plan--1743800106879.txt  Pasted--2-0-import-streamlit-as-st-import-json-import-os-import-pandas-as-pd-from-utils-data-processor-imp-1743800000145.txt  Pasted--CoachDashboardSummary-jsx-i-1748219527897.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-http-equiv-X-UA-Compa-1742104588040.txt  Pasted--GoalCreator-jsx-import-us-1748644251589.txt  Pasted--GoalCreator-jsx-import-us-1748644463270.txt  Pasted--Healthmap-SummaryTab-jsx-im-1748217084010.txt  Pasted--MarketplaceRecommendations-jsx--1748232321973.txt  Pasted--SettingsPage-jsx-import-Rea-1748232760473.txt  Pasted--adminAuthGuard-js-import--1748282162751.txt  Pasted--app-py-import-streamlit-as-st-import-json-import-os-import-pandas-as-pd-from-utils-data-processor--1743797123758.txt  Pasted-Code-2-DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-c-1742104665617.txt  Pasted-Code-3-DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-1742104724553.txt  (+9 more)
(+423 files in other folders)
